# FFPlayerDemo

./: LICENSE  README.md  build_ffmpeg.sh
app/: .gitignore  CMakeCache.txt  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/cc/dewdrop/ffplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/cc/dewdrop/ffplayer/: FFApp.java  MainActivity.java
app/src/main/java/cc/dewdrop/ffplayer/utils/: FFUtils.java
app/src/main/java/cc/dewdrop/ffplayer/widget/: FFVideoView.java
app/src/main/jniLibs/includes/libavutil/: ffversion.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cc/dewdrop/ffplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
